--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,5 +8,6 @@ $nike: rgb(224, 237, 94);
 $light: rgb(204, 204, 204);
 $dark: rgb(26, 26, 26);
 $green:  rgb(0,237,94);
+$yellow: rgb(224,237,94)；
 
 $map-box-line-color:rgb(71, 184, 224)
